--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,14 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  scrollbar-width: thin;
+  scrollbar-color: #0088cc rgb(255, 0, 0);
 }
+
 body {
   font-family: "Poppins", sans-serif;
 }
+
 img {
   max-width: 100%;
 }
@@ -122,6 +126,28 @@ td {
 .header-txt p {
   font-size: 20px;
   text-transform: uppercase;
+}
+/* From Uiverse.io by alexruix */
+.input {
+  text-align: center;
+  max-width: 190px;
+  background-color: #f5f5f5;
+  color: #242424;
+  padding: 0.15rem 0.5rem;
+  min-height: 40px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 10px 20px -18px;
+}
+
+input:focus {
+  border-bottom: 2px solid #5b5fc7;
+  border-radius: 4px 4px 2px 2px;
+}
+
+input:hover {
+  outline: 1px solid lightgrey;
 }
 .btn-1 {
   display: inline-block;
